// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Componente: FiltroBody Ao clicar no botão de esconder opções de filtro deve exibir o nome do filtro e o botão de mostrar opções 1`] = `
<div
  data-testid="FiltroBody"
>
  <div
    class="ConteinerFiltro"
  >
    <div
      class="tituloFiltro"
    >
      <p>
        Filtrar por nome do Profissional Responsável
      </p>
      <button
        class="ShowFiltros"
      >
        +
      </button>
    </div>
  </div>
</div>
`;

exports[`Componente: FiltroBody Ao clicar no botão de mostrar opções de filtro deve renderizar o nome do filtro, o botão de esconder opções e as opções em ordem crescente 1`] = `
<div
  data-testid="FiltroBody"
>
  <div
    class="ConteinerFiltro"
  >
    <div
      class="tituloFiltro"
    >
      <p>
        Filtrar por nome do Profissional Responsável
      </p>
      <button
        class="ShowFiltros"
      >
        -
      </button>
    </div>
    <div
      class="ConteinerFiltros"
    >
      <div
        class="FiltroCard"
        data-testid="FiltroCard"
      >
        <input
          class="InputFiltroCard"
          id="Alessandra Santos"
          name="acs_nome"
          type="checkbox"
        />
        <p>
          Alessandra Santos
        </p>
      </div>
      <div
        class="FiltroCard"
        data-testid="FiltroCard"
      >
        <input
          class="InputFiltroCard"
          id="Carmen Miranda"
          name="acs_nome"
          type="checkbox"
        />
        <p>
          Carmen Miranda
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Componente: FiltroBody Ao passar a propriedade labels Quando as opções de filtro são strings numéricas deve exibir as labels no lugar das opções 1`] = `
<div
  data-testid="FiltroBody"
>
  <div
    class="ConteinerFiltro"
  >
    <div
      class="tituloFiltro"
    >
      <p>
        Filtrar por nome do Profissional Responsável
      </p>
      <button
        class="ShowFiltros"
      >
        -
      </button>
    </div>
    <div
      class="ConteinerFiltros"
    >
      <div
        class="FiltroCard"
        data-testid="FiltroCard"
      >
        <input
          class="InputFiltroCard"
          id="ACS 1"
          name="acs_nome"
          type="checkbox"
        />
        <p>
          ACS 1
        </p>
      </div>
      <div
        class="FiltroCard"
        data-testid="FiltroCard"
      >
        <input
          class="InputFiltroCard"
          id="ACS 2"
          name="acs_nome"
          type="checkbox"
        />
        <p>
          ACS 2
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Componente: FiltroBody Ao passar a propriedade labels Quando as opções de filtro são strings não numéricas não deve exibir as labels no lugar das opções 1`] = `
<div
  data-testid="FiltroBody"
>
  <div
    class="ConteinerFiltro"
  >
    <div
      class="tituloFiltro"
    >
      <p>
        Filtrar por nome do Profissional Responsável
      </p>
      <button
        class="ShowFiltros"
      >
        -
      </button>
    </div>
    <div
      class="ConteinerFiltros"
    >
      <div
        class="FiltroCard"
        data-testid="FiltroCard"
      >
        <input
          class="InputFiltroCard"
          id="Alessandra Santos"
          name="acs_nome"
          type="checkbox"
        />
        <p>
          Alessandra Santos
        </p>
      </div>
      <div
        class="FiltroCard"
        data-testid="FiltroCard"
      >
        <input
          class="InputFiltroCard"
          id="Carmen Miranda"
          name="acs_nome"
          type="checkbox"
        />
        <p>
          Carmen Miranda
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Componente: FiltroBody deve renderizar o nome do filtro e o botão de mostrar opções 1`] = `
<div
  data-testid="FiltroBody"
>
  <div
    class="ConteinerFiltro"
  >
    <div
      class="tituloFiltro"
    >
      <p>
        Filtrar por nome do Profissional Responsável
      </p>
      <button
        class="ShowFiltros"
      >
        +
      </button>
    </div>
  </div>
</div>
`;
